# big-benchmark

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/: full-suite.yaml
configs/samples/: deepseek.yaml
configs/sglang/: all.yaml  deepseek.yaml  gemma3.yaml  gpt-oss.yaml  llama3.yaml  mistral.yaml  qwen.yaml  zeta.yaml
configs/tensorrt-llm/: all.yaml  deepseek.yaml  gpt-oss.yaml  llama3.yaml  mistral.yaml  zeta.yaml
configs/tokasaurus/: llama3.yaml
configs/vllm/: deepseek.yaml  gemma3.yaml  gpt-oss.yaml  llama3.yaml  mistral.yaml  qwen.yaml  zeta.yaml
src/big_benchmark/: __init__.py  resources.py  run_benchmark_suite.py
src/big_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/big_benchmark/cli/: __init__.py  run_benchmark_suite.py
src/big_benchmark/db/: benchmark.py
src/big_benchmark/web/: __init__.py  datasette_runner.py  etl.py  transforms.py
src/web/: datasette_runner.py  etl.py
